// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.languages.web;

option go_package = "namespacelabs.dev/foundation/languages/web";

import "schema/schema.proto";

message OpGenHttpBackend {
    foundation.schema.Node node    = 1;
    repeated Backend       backend = 2;

    message Backend {
        string instance_name  = 1;
        string endpoint_owner = 2;
        string service_name   = 3;
        string ingress_name   = 4;
        string manager        = 5;
    }
}